Add Facebook Login
Followed https://developers.facebook.com/

--- a/ChatsApp/Info.plist
+++ b/ChatsApp/Info.plist
@@ -2,6 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>tingtingxiu.ChatsApp</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1222271808417454</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1222271808417454</string>
+	<key>FacebookClientToken</key>
+	<string>5afbfcdaf51bae17d3f95ce6b2fe7d60</string>
+	<key>FacebookDisplayName</key>
+	<string>ChatsApp</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
